# browser-use-mcp-server

./: .env.example  README.md  pyproject.toml
.github/workflows/: ci.yml
server/: server.py
src/browser_use_mcp_server/: __init__.py  cli.py  server.py
